refactors for more daily-based world components